--- a/src/Components/SearchBar.css
+++ b/src/Components/SearchBar.css
@@ -1,3 +1,5 @@
+/* SEARCH SECTION */
+
 .searchInputs{
     display: flex;
     margin-top: 105px;
@@ -29,4 +31,47 @@ input:focus{
 
 .searchIcon svg{
     font-size: 35px;
+}
+
+/* DATA RESULT SECTION */
+
+.dataResult{
+    width: 300px;
+    height: 200px;
+    margin-top: 5px;
+    overflow: hidden;
+    overflow-y: auto;
+    border-radius: 5px;
+    background-color: aliceblue;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.dataResult::-webkit-scrollbar{
+    display: none;
+}
+
+.dataResult .dataItem{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    color: black;
+    align-items: center;
+}
+
+.dataItem p{
+    margin-left: 10px;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover{
+    transition: 0.5s;
+    background-color: #ffb4f9;
+    background-image: linear-gradient(30deg, #ffb4f9, #cefff8);
+}
+
+#clearBtn{
+    cursor: pointer;
 }
